--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "next-remove-imports": "^1.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
