--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@szhsin/react-menu": "^3.3.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,6 +12,7 @@
     "@uiw/react-md-editor": "^3.6.0",
     "hamburger-react": "^2.5.0",
     "next-remove-imports": "^1.0.8",
+    "prompt": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
