--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,10 @@
     "@uiw/react-md-editor": "^3.6.0",
     "hamburger-react": "^2.5.0",
     "next-remove-imports": "^1.0.8",
-    "prompt": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
