ty proxy타입으로변경

--- a/client/.env
+++ b/client/.env
@@ -19,7 +19,7 @@ REACT_APP_EP_USER=/users
 # 	content :  질문글 내용입니다 ,
 # 	tag : java
 # }
-REACT_APP_EP_POSTS_CREATE=$REACT_APP_BASEURL/board/posts
+REACT_APP_EP_POSTS_CREATE=/board/posts
 
 # POST 추천
 # {
@@ -27,11 +27,11 @@ REACT_APP_EP_POSTS_CREATE=$REACT_APP_BASEURL/board/posts
 # }
 # 사용예시 REACT_APP_EP_POSTS_CREATE + '/' + 게시물number + REACT_APP_EP_POSTS_LIKES
 # /posts/1/postLikes
-REACT_APP_EP_POSTS_LIKES=$REACT_APP_BASEURL/postLikes
+REACT_APP_EP_POSTS_LIKES=/postLikes
 
 # GET 특정 게시글 상세 조회
 # /board/posts/1
-REACT_APP_EP_POSTS_DETAIL=$REACT_APP_BASEURL/board/posts
+REACT_APP_EP_POSTS_DETAIL=/board/posts
 
 # 조합
 # PATCH 게시글 수정 요청
@@ -41,7 +41,7 @@ REACT_APP_EP_POSTS_DETAIL=$REACT_APP_BASEURL/board/posts
 # 	content :  수정한 질문글 내용입니다 ,
 # 	tag : Spring
 # }
-REACT_APP_EP_POSTS_EDIT=$REACT_APP_BASEURL/board/posts
+REACT_APP_EP_POSTS_EDIT=/board/posts
 
 # 조합
 # POST 게시글 댓글 추천
@@ -77,8 +77,8 @@ REACT_APP_EP_COMMENT_UNLIKES=/commentUnLikes
 #     page: 1, <- 시작페이지
 #     size: 3  <- value개의 게시물
 # }
-REACT_APP_EP_POSTS_LIST=$REACT_APP_BASEURL/board/posts
+REACT_APP_EP_POSTS_LIST=/board/posts
 
 # DELETE 게시글 삭제 요청
 # /board/posts/1
-REACT_APP_EP_POSTS_DELETE=$REACT_APP_BASEURL/board/posts
+REACT_APP_EP_POSTS_DELETE=/board/posts
