--- a/client/.env
+++ b/client/.env
@@ -19,8 +19,9 @@ REACT_APP_EP_USER=$REACT_APP_BASEURL/users
 # 	content :  질문글 내용입니다 ,
 # 	tag : java
 # }
-REACT_APP_EP_POSTS_CREATE=/board/posts
+REACT_APP_EP_POSTS_CREATE=$REACT_APP_BASEURL/board/posts
 
+# 조합
 # POST 추천
 # {
 #     count: 1
@@ -31,9 +32,8 @@ REACT_APP_EP_POSTS_LIKES=/postLikes
 
 # GET 특정 게시글 상세 조회
 # /board/posts/1
-REACT_APP_EP_POSTS_DETAIL=/board/posts
+REACT_APP_EP_POSTS_DETAIL=$REACT_APP_BASEURL/board/posts
 
-# 조합
 # PATCH 게시글 수정 요청
 # /board/posts/1
 # {
@@ -41,7 +41,7 @@ REACT_APP_EP_POSTS_DETAIL=/board/posts
 # 	content :  수정한 질문글 내용입니다 ,
 # 	tag : Spring
 # }
-REACT_APP_EP_POSTS_EDIT=/board/posts
+REACT_APP_EP_POSTS_EDIT=$REACT_APP_BASEURL/board/posts
 
 # 조합
 # POST 게시글 댓글 추천
@@ -60,7 +60,7 @@ REACT_APP_EP_COMMENT_LIKES=/commentLikes
 #     count: -1
 # }
 # 예시: REACT_APP_EP_POSTS_DETAIL + '/' + postid + REACT_APP_EP_POSTS_UNLIKES
-REACT_APP_EP_POSTS_UNLIKES=/postUnLikes
+REACT_APP_EP_POSTS_UNLIKES=$REACT_APP_BASEURL/postUnLikes
 
 # 조합
 # POST게시글 댓글 비추천 api
@@ -77,8 +77,8 @@ REACT_APP_EP_COMMENT_UNLIKES=/commentUnLikes
 #     page: 1, <- 시작페이지
 #     size: 3  <- value개의 게시물
 # }
-REACT_APP_EP_POSTS_LIST=/board/posts
+REACT_APP_EP_POSTS_LIST=$REACT_APP_BASEURL/board/posts
 
 # DELETE 게시글 삭제 요청
 # /board/posts/1
-REACT_APP_EP_POSTS_DELETE=/board/posts
+REACT_APP_EP_POSTS_DELETE=$REACT_APP_BASEURL/board/posts
