--- a/client/.env
+++ b/client/.env
@@ -19,7 +19,7 @@ REACT_APP_EP_USER=$REACT_APP_BASEURL/users
 # 	content :  질문글 내용입니다 ,
 # 	tag : java
 # }
-REACT_APP_EP_POSTS_CREATE=$REACT_APP_BASEURL/board/posts
+REACT_APP_EP_POSTS_CREATE=/board/posts
 
 # 조합
 # POST 추천
@@ -32,7 +32,7 @@ REACT_APP_EP_POSTS_LIKES=/postLikes
 
 # GET 특정 게시글 상세 조회
 # /board/posts/1
-REACT_APP_EP_POSTS_DETAIL=$REACT_APP_BASEURL/board/posts
+REACT_APP_EP_POSTS_DETAIL=/board/posts
 
 # PATCH 게시글 수정 요청
 # /board/posts/1
@@ -41,7 +41,7 @@ REACT_APP_EP_POSTS_DETAIL=$REACT_APP_BASEURL/board/posts
 # 	content :  수정한 질문글 내용입니다 ,
 # 	tag : Spring
 # }
-REACT_APP_EP_POSTS_EDIT=$REACT_APP_BASEURL/board/posts
+REACT_APP_EP_POSTS_EDIT=/board/posts
 
 # 조합
 # POST 게시글 댓글 추천
@@ -60,7 +60,7 @@ REACT_APP_EP_COMMENT_LIKES=/commentLikes
 #     count: -1
 # }
 # 예시: REACT_APP_EP_POSTS_DETAIL + '/' + postid + REACT_APP_EP_POSTS_UNLIKES
-REACT_APP_EP_POSTS_UNLIKES=$REACT_APP_BASEURL/postUnLikes
+REACT_APP_EP_POSTS_UNLIKES=/postUnLikes
 
 # 조합
 # POST게시글 댓글 비추천 api
