--- a/client/.env
+++ b/client/.env
@@ -5,11 +5,11 @@ SERVER_PORT=:8080
 
 REACT_APP_BASEURL=${SERVER_PROTOCOL}${SERVER_HOST}${SERVER_PORT}
 
-REACT_APP_EP_SIGNUP=$REACT_APP_BASEURL/user/signup
-REACT_APP_EP_SIGNOUT=$REACT_APP_BASEURL/user/signout
-REACT_APP_EP_LOGIN=$REACT_APP_BASEURL/user/login
-REACT_APP_EP_LOGOUT=$REACT_APP_BASEURL/user/logout
-REACT_APP_EP_USER=$REACT_APP_BASEURL/users
+REACT_APP_EP_SIGNUP=/user/signup
+REACT_APP_EP_SIGNOUT=/user/signout
+REACT_APP_EP_LOGIN=/user/login
+REACT_APP_EP_LOGOUT=/user/logout
+REACT_APP_EP_USER=/users
 
 # 조합해야되는 예시에는 기본적으로 process.env.REACT_APP_타입이름이 붙는다.
 
