--- a/client/package.json
+++ b/client/package.json
@@ -55,5 +55,5 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0"
   },
-  "proxy": 
+  "proxy": "http://152.67.220.223:8080"
 }
