유저정보완료

--- a/client/.env
+++ b/client/.env
@@ -11,7 +11,7 @@ REACT_APP_EP_SIGNOUT=/user/signout
 # 완
 REACT_APP_EP_LOGIN=/user/login
 REACT_APP_EP_LOGOUT=/user/logout
-REACT_APP_EP_USER=/users
+REACT_APP_EP_USER=/user
 
 # 조합해야되는 예시에는 기본적으로 process.env.REACT_APP_타입이름이 붙는다.
 
