회원정보수정

--- a/client/.env
+++ b/client/.env
@@ -7,11 +7,16 @@ REACT_APP_BASEURL=${SERVER_PROTOCOL}${SERVER_HOST}${SERVER_PORT}
 
 # 완
 REACT_APP_EP_SIGNUP=/user/signup
+# 완
 REACT_APP_EP_SIGNOUT=/user/signout
 # 완
 REACT_APP_EP_LOGIN=/user/login
-REACT_APP_EP_LOGOUT=/user/logout
+# 미구현기능
+# REACT_APP_EP_LOGOUT=/user/logout
+# 완
 REACT_APP_EP_USER=/user
+# /user/edit/{user_id}
+REACT_APP_EP_USER_EDIT=/user/edit
 
 # 조합해야되는 예시에는 기본적으로 process.env.REACT_APP_타입이름이 붙는다.
 
