feat: ddl-auto validate로 수정

--- a/src/main/resources/application-server.yml
+++ b/src/main/resources/application-server.yml
@@ -6,7 +6,7 @@ spring:
     password: 1Q2w3e4r@
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
