포트변경됨

--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-js-pagination": "^3.0.3",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
@@ -55,5 +56,5 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0"
   },
-  "proxy": "http://152.67.220.223:8080"
+  "proxy": "http://152.67.220.223:8881"
 }
