--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-md-editor": "^3.6.0",
     "axios": "^1.2.2",
+    "classnames": "^2.3.2",
     "hamburger-react": "^2.5.0",
     "next-remove-imports": "^1.0.8",
+    "paginator": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-js-pagination": "^3.0.3",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
