--- a/client/.env
+++ b/client/.env
@@ -1,46 +1,55 @@
-# 노션 API 명세서 확인
+# 노션 API 명세서 확인===============================================
 SERVER_PROTOCOL=http://
 SERVER_HOST=152.67.220.223
 SERVER_PORT=:8881
 
 REACT_APP_BASEURL=${SERVER_PROTOCOL}${SERVER_HOST}${SERVER_PORT}
 
+# 회원===============================================================
+# 공통
+USER=/user
 # 완
-REACT_APP_EP_SIGNUP=/user/signup
+REACT_APP_EP_SIGNUP=$USER/signup
 # 완
-REACT_APP_EP_SIGNOUT=/user/signout
+REACT_APP_EP_SIGNOUT=$USER/signout
 # 완
-REACT_APP_EP_LOGIN=/user/login
+REACT_APP_EP_LOGIN=$USER/login
 # 미구현기능
-# REACT_APP_EP_LOGOUT=/user/logout
+# REACT_APP_EP_LOGOUT=$USER/logout
 # 완
-REACT_APP_EP_USER=/user
+REACT_APP_EP_USER=$USER
 # /user/edit/{user_id}
-REACT_APP_EP_USER_EDIT=/user/edit
+# 완
+REACT_APP_EP_USER_EDIT=$USER/edit
 
+# ======================================================================
 # 조합해야되는 예시에는 기본적으로 process.env.REACT_APP_타입이름이 붙는다.
+# ======================================================================
 
+# 게시글=================================================================
+# 공통
+BOARD=/board
+POSTS=/posts
+# 완
 # POST 게시글 등록 요청
 # {
 # 	title :  질문글 제목입니다 ,
 # 	content :  질문글 내용입니다 ,
 # 	tag : java
 # }
-REACT_APP_EP_POSTS_CREATE=/board/posts
-
-# 조합
-# POST 추천
+REACT_APP_EP_POSTS_CREATE=${BOARD}${POSTS}
+# 완
+# GET모든 게시글 페이징 조회 api
 # {
-#     count: 1
+#     page: 1, <- 시작페이지
+#     size: 3  <- value개의 게시물
 # }
-# 사용예시 REACT_APP_EP_POSTS_CREATE + '/' + 게시물number + REACT_APP_EP_POSTS_LIKES
-# /posts/1/postLikes
-REACT_APP_EP_POSTS_LIKES=/postLikes
-
+REACT_APP_EP_POSTS_LIST=${BOARD}${POSTS}
+# 완
 # GET 특정 게시글 상세 조회
 # /board/posts/1
-REACT_APP_EP_POSTS_DETAIL=/board/posts
-
+REACT_APP_EP_POSTS_DETAIL=${BOARD}${POSTS}
+# 완
 # PATCH 게시글 수정 요청
 # /board/posts/1
 # {
@@ -48,18 +57,21 @@ REACT_APP_EP_POSTS_DETAIL=/board/posts
 # 	content :  수정한 질문글 내용입니다 ,
 # 	tag : Spring
 # }
-REACT_APP_EP_POSTS_EDIT=/board/posts
+REACT_APP_EP_POSTS_EDIT=${BOARD}${POSTS}
+# 완
+# DELETE 게시글 삭제 요청
+# /board/posts/1
+REACT_APP_EP_POSTS_DELETE=${BOARD}${POSTS}
 
 # 조합
-# POST 게시글 댓글 추천
-# /board/posts/1/comment/1/commentLikes
+# POST 게시글 추천
 # {
 #     count: 1
 # }
-# 예시: REACT_APP_EP_POSTS_DETAIL + REACT_APP_EP_COMMENT + '/' + postid + '/' + commentid + REACT_APP_EP_COMMENT_LIKES
-REACT_APP_EP_COMMENT=/comment
-REACT_APP_EP_COMMENT_LIKES=/commentLikes
+# 사용예시 REACT_APP_EP_POSTS_CREATE + '/' + 게시물number + REACT_APP_EP_POSTS_LIKES
+# /posts/1/postLikes
 
+REACT_APP_EP_POSTS_LIKES=/postLikes
 # 조합
 # POST게시글 비추천 api
 # /board/posts/1/postUnLikes
@@ -69,8 +81,39 @@ REACT_APP_EP_COMMENT_LIKES=/commentLikes
 # 예시: REACT_APP_EP_POSTS_DETAIL + '/' + postid + REACT_APP_EP_POSTS_UNLIKES
 REACT_APP_EP_POSTS_UNLIKES=/postUnLikes
 
+# 댓글====================================================================================
+# 공통
+REACT_APP_EP_COMMENT=/comment
+
+# POST 댓글 등록
+# {
+#     "content" : " 댓글 내용입니다 "
+# }
+# http://localhost:8080/board/posts{/1}/comment
+REACT_APP_EP_COMMENT_CREATE=${BOARD}${POSTS}
+
+# PATCH 댓글 수정
+# {
+#     "content" : " 수정된 댓글 내용입니다 .!!! "
+# }
+# http://localhost:8080/board/posts{/1}/comment{/1}
+REACT_APP_EP_COMMENT_EDIT=${BOARD}${POSTS}
+
+# DELETE 댓글 삭제
+# http://localhost:8080/board/posts{/1}/comment{/1}
+REACT_APP_EP_COMMENT_DELETE=${BOARD}${POSTS}
+
+# POST 댓글 추천
+# /board/posts/1/comment/1/commentLikes
+# {
+#     count: 1
+# }
+# 예시: REACT_APP_EP_POSTS_DETAIL + REACT_APP_EP_COMMENT + '/' + postid + '/' + commentid + REACT_APP_EP_COMMENT_LIKES
+
+REACT_APP_EP_COMMENT_LIKES=/commentLikes
+
 # 조합
-# POST게시글 댓글 비추천 api
+# POST 댓글 비추천 api
 # /board/posts/1/comment/1/commentUnLikes
 # {
 #     count: -1
@@ -78,14 +121,3 @@ REACT_APP_EP_POSTS_UNLIKES=/postUnLikes
 # REACT_APP_EP_COMMENT=/comment
 # 예시: REACT_APP_EP_POSTS_DETAIL + REACT_APP_EP_COMMENT + '/' + postid + '/' + commentid + REACT_APP_EP_COMMENT_UNLIKES
 REACT_APP_EP_COMMENT_UNLIKES=/commentUnLikes
-
-# GET모든 게시글 페이징 조회 api
-# {
-#     page: 1, <- 시작페이지
-#     size: 3  <- value개의 게시물
-# }
-REACT_APP_EP_POSTS_LIST=/board/posts
-
-# DELETE 게시글 삭제 요청
-# /board/posts/1
-REACT_APP_EP_POSTS_DELETE=/board/posts
