--- a/client/.env
+++ b/client/.env
@@ -7,20 +7,20 @@ REACT_APP_BASEURL=${SERVER_PROTOCOL}${SERVER_HOST}${SERVER_PORT}
 
 # 회원===============================================================
 # 공통
-USER=/user
+EP_USER=/user
 # 완
-REACT_APP_EP_SIGNUP=$USER/signup
+REACT_APP_EP_SIGNUP=$EP_USER/signup
 # 완
-REACT_APP_EP_SIGNOUT=$USER/signout
+REACT_APP_EP_SIGNOUT=$EP_USER/signout
 # 완
-REACT_APP_EP_LOGIN=$USER/login
+REACT_APP_EP_LOGIN=$EP_USER/login
 # 미구현기능
-# REACT_APP_EP_LOGOUT=$USER/logout
+# REACT_APP_EP_LOGOUT=$EP_USER/logout
 # 완
-REACT_APP_EP_USER=$USER
+REACT_APP_EP_USER=$EP_USER
 # /user/edit/{user_id}
 # 완
-REACT_APP_EP_USER_EDIT=$USER/edit
+REACT_APP_EP_USER_EDIT=$EP_USER/edit
 
 # ======================================================================
 # 조합해야되는 예시에는 기본적으로 process.env.REACT_APP_타입이름이 붙는다.
