마아아아아지마아각

--- a/client/.env
+++ b/client/.env
@@ -39,7 +39,7 @@ POSTS=/posts
 # }
 REACT_APP_EP_POSTS_CREATE=${BOARD}${POSTS}
 # 완
-# GET모든 게시글 페이징 조회 api
+# GET모든 게시글 페이징 조회 
 # {
 #     page: 1, <- 시작페이지
 #     size: 3  <- value개의 게시물
